2013-03-19  Roland Clobus <rclobus@rclobus.nl>
	* configure.ac, Makefile.am, MinGW/README.txt, MinGW/iconify2.scm,
	client/gtk/data/pioneers.ico, server/gtk/pioneers-server.ico,
	editor/gtk/pioneers-editor.ico: Store hard to regenerate MSWindows
	icons in the repository again. (Icons are now also 256x256)

2013-03-17  Roland Clobus <rclobus@rclobus.nl>
	* server/avahi.c, server/meta.c, common/network.c, common/network.h:
	Replaced copy of code from g_get_host_name by glib function.

2013-03-15  Roland Clobus <rclobus@rclobus.nl>
	* common/gtk/colors.c, common/gtk/gtkbugs.c, common/gtk/polygon.c,
	server/avahi.h: Fixed FTBFS on Debian 6 due to missing include of
	config.h. Checked all files to include config.h in the c-file.

2013-03-07  Roland Clobus <rclobus@rclobus.nl>
	* metaserver/main.c: Use the regular log functions.

2013-02-26  Roland Clobus <rclobus@rclobus.nl>
	* server/meta.c, server/admin.c, server/server.h, client/gtk/connect.c,
	common/network.h, common/state.c, common/network.c: Added Session to
	callbacks. Fixed handling of the metaserver protocol.
	* common/gtk/common_gtk.c, common/gtk/common_gtk.h, server/gtk/main.c,
	client/gtk/gui.c: Show the log when something is logged.
	* common/state.c: Fixed the bug introduced on 2013-02-15 which crashed
	the server when a connection was closed.

2013-02-24  Roland Clobus <rclobus@rclobus.nl>
	* configure.ac, server/server.c, server/server.h, server/main.c,
	server/admin.c, server/admin.h, server/gtk/main.c, server/meta.c,
	Makefile.am, metaserver/README.protocol, metaserver/meta-report,
	metaserver/main.c, metaserver/Makefile.am, client/gtk/admin-gtk.c,
	client/gtk/frontend.h, client/gtk/offline.c, client/gtk/connect.c,
	client/help/C/pioneers.xml, po/POTFILES.in, ChangeLog,
	docs/pioneers-server-gtk.6, docs/pioneers-meta-server.6,
	docs/pioneers-metaserver.6, docs/pioneers.6, docs/Makefile.am,
	docs/pioneers-server-console.6, common/network.c, common/network.h,